fix overflow issue

--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ body {
     width: 100vw;
     padding: 0;
     margin: 0;
+}
+
+.hide-overflow {
     overflow-x: hidden;
 }
 
